[package]
name = "marie"
version = "0.1.0"
authors = ["lechat thecat <shu845@gmail.com>"]
edition = "2021"

# This software is created from this project "tdp2110/crafting-interpreters-rs":
# https://github.com/tdp2110/crafting-interpreters-rs
# License: https://github.com/tdp2110/crafting-interpreters-rs/blob/bf621b7eb57c0307e9f20af30bab4b318faa8f4b/LICENSE

[dependencies]
clap = "4"
serde = { version = "1", features = ["derive"] }
ctrlc = "3.4"
rustyline = "15"
colored = "3"
itertools = "0.14"

[profile.dev]
opt-level = 0
